samples/_failures_safe/1761086270_83c621_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_add74702.c: In function ‘main’:
./samples/SAFE/__tmp_add74702.c:137:53: error: expected ‘]’ at end of input
  137 |         printf("%d. [%s] %s: %s\n", i + 1, entries[i
      |                                                     ^
      |                                                     ]
./samples/SAFE/__tmp_add74702.c:137:9: error: expected declaration or statement at end of input
  137 |         printf("%d. [%s] %s: %s\n", i + 1, entries[i
      |         ^~~~~~
./samples/SAFE/__tmp_add74702.c:137:9: error: expected declaration or statement at end of input
